--- a/assets/translations/pt-br.json
+++ b/assets/translations/pt-br.json
@@ -123,15 +123,15 @@
     "titulo": "Recomendações",
     "recomendacao1_texto": "Vladmir tem clareza de visão e suas opiniões são sempre muito assertivas. Sua participação nos projetos ajuda a descobrir antecipadamente situacoes não previstas e discutidas, evitando riscos financeiros e riscos de prazo. Apoia tambem fortemente junto aos desenvolvedores visando obter códigos de qualidade e melhores práticas de desenvolvimento. Sem nenhuma dúvida trata-se de um profissional diferenciado e acima da média do mercado.",
     "recomendacao1_nome": "Sergio Oliveira",
-    "recomendacao1_cargo": "Executivo de TI, Crefisa",
+    "recomendacao1_cargo": "Executivo de TI",
 
-    "recomendacao2_texto": "\"Trabalhar com o Vladmir foi uma experiência enriquecedora. Sua abordagem metódica para testes e sua compreensão profunda da experiência do usuário trouxeram uma nova perspectiva para nossa equipe. Ele é um verdadeiro defensor da qualidade em todos os aspectos.\"",
+    "recomendacao2_texto": "\"Profissional que sabe se relacionar bem com a equipe, pontuando\nos problemas e desafios a serem vencidos. Um ótimo analista de\nQA com muito potencial de desenvolvimento. Sabe investigar,\ndocumentar e testar as tarefas do dia a dia, fazendo muito bem o\npapel de Testes Funcionais. Recomendo Vladmir Prates.\"",
     "recomendacao2_nome": "Julio Cesar Nietto",
-    "recomendacao2_cargo": "Coordenador de QA, Riachuelo",
+    "recomendacao2_cargo": "Coordenador de QA",
 
     "recomendacao3_texto": "\"O conhecimento técnico do Vladmir combinado com sua paixão por jogos traz uma perspectiva única para os projetos. Ele entende profundamente como criar experiências de usuário envolventes e garantir que cada interação seja perfeita.\"",
     "recomendacao3_nome": "Mariana Costa",
-    "recomendacao3_cargo": "UX Designer na Novigi Solution"
+    "recomendacao3_cargo": "UX Designer"
   },
   "contato": {
     "titulo": "Entre em Contato",
